Adding customerId (UUID) to Customer, an additional guard in addCustomer